[metadata]
name = luma.lcd
version = attr: luma.lcd.__version__
description = A library to drive PCD8544, HD44780, HT1621, ST7735, ST7789, ST7567, UC1701X and ILI9341-based LCD displays
long_description = file: README.rst, CONTRIBUTING.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = raspberry pi, rpi, lcd, display, screen, rgb, monochrome, greyscale, color, nokia 5110, pcd8544, st7735, st7789, uc1701x, ht1621, ili9341, hd44780, spi, i2c, parallel, bitbang6800, pcf8574
author = Richard Hull
author_email = richard.hull@destructuring-bind.org
url = https://github.com/rm-hull/luma.lcd
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.8, <4
install_requires =
    luma.core>=2.4.1
tests_require =
    pytest
    pytest-cov
    pytest-timeout

[options.packages.find]
include = luma*

[options.extras_require]
docs =
    sphinx>=1.5.1
    sphinx-rtd-theme
qa =
    flake8
    rstcheck
test =
    pytest
    pytest-cov
    pytest-timeout

[bdist_wheel]
universal = 1

[flake8]
ignore = E127, E128, E241, E402, E501, E731, E741
exclude =
    .ropeproject,
    .tox,
    .eggs,
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    doc,
    build,
    dist

[aliases]
test=pytest
